[package]
name = "cdpay"
version = "0.1.2"
authors = ["Martin Habovštiak <martin.habovstiak@gmail.com>"]
description = "CryptoDiggers payment API client."
categories = ["api-bindings", "network-programming"]
keywords = ["CryptoDiggers", "payment", "Bitcoin", "cryptocurrency", "API"]
license = "MITNFA"
readme = "README.md"
repository = "https://github.com/Kixunil/cdpay"

[package.metadata.docs.rs]
features = ["slog"]
all-features = true

[features]
default = []

[dependencies]
futures = "0.1"
hyper = "0.11"
hyper-tls = "0.1.2"
native-tls = "0.1.4"
tokio-core = "0.1"
serde = "1"
serde_derive = "1"
serde_json = "1"
urlencoding = "1"
tokio-retry = "0.1"
slog = { version = "2.4", optional = true }
